--- a/css/main.scss
+++ b/css/main.scss
@@ -13,13 +13,11 @@ $base-line-height: 1.5;
 
 $spacing-unit:     30px;
 
-$text-color:       #111;
+$text-color:       #252C33;
 $background-color: #fdfdfd;
-$brand-color:      #2a7ae2;
+$brand-color:      #004563;
 
-$grey-color:       #828282;
-$grey-color-light: lighten($grey-color, 40%);
-$grey-color-dark:  darken($grey-color, 25%);
+$day-color:       #ab1a25;
 
 // Width of the content area
 $content-width:    800px;
