--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -14,13 +14,15 @@ dl, dd, ol, ul, figure {
  * Basic styling
  */
 body {
-    font-family: $base-font-family;
-    font-size: $base-font-size;
-    line-height: $base-line-height;
-    font-weight: 300;
+    font: $base-font-weight #{$base-font-size}/#{$base-line-height} $base-font-family;
     color: $text-color;
     background-color: $background-color;
     -webkit-text-size-adjust: 100%;
+    -webkit-font-feature-settings: "kern" 1;
+    -moz-font-feature-settings: "kern" 1;
+    -o-font-feature-settings: "kern" 1;
+    font-feature-settings: "kern" 1;
+    font-kerning: normal;
 }
 
 
@@ -80,7 +82,7 @@ li {
  * Headings
  */
 h1, h2, h3, h4, h5, h6 {
-    font-weight: 300;
+    font-weight: $base-font-weight;
 }
 
 
@@ -109,7 +111,7 @@ a {
  */
 blockquote {
     color: $day-color;
-    border-left: 4px solid $day-color;
+    border-left: 4px solid $day-color-light;
     padding-left: $spacing-unit / 2;
     font-size: 18px;
     letter-spacing: -1px;
@@ -128,7 +130,7 @@ blockquote {
 pre,
 code {
     font-size: 15px;
-    border: 1px solid $day-color;
+    border: 1px solid $day-color-light;
     border-radius: 3px;
     background-color: #eef;
 }
@@ -139,7 +141,7 @@ code {
 
 pre {
     padding: 8px 12px;
-//    overflow-x: scroll;
+    overflow-x: auto;
 
     > code {
         border: 0;
