--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -2,8 +2,8 @@
  * Site header
  */
 .site-header {
-    border-top: 5px solid $day-color;
-    border-bottom: 1px solid $day-color;
+    border-top: 5px solid $day-color-dark;
+    border-bottom: 1px solid $day-color-light;
     min-height: 56px;
 
     // Positioning context for the mobile navigation icon
@@ -12,6 +12,7 @@
 
 .site-title {
     font-size: 26px;
+    font-weight: 300;
     line-height: 56px;
     letter-spacing: -1px;
     margin-bottom: 0;
@@ -19,7 +20,7 @@
 
     &,
     &:visited {
-        color: $day-color;
+        color: $day-color-dark;
     }
 }
 
@@ -35,18 +36,18 @@
         color: $text-color;
         line-height: $base-line-height;
 
-        // Gaps between nav items, but not on the first one
-        &:not(:first-child) {
-            margin-left: 20px;
+        // Gaps between nav items, but not on the last one
+        &:not(:last-child) {
+            margin-right: 20px;
         }
     }
 
     @include media-query($on-palm) {
         position: absolute;
         top: 9px;
-        right: 30px;
+        right: $spacing-unit / 2;
         background-color: $background-color;
-        border: 1px solid $day-color;
+        border: 1px solid $day-color-light;
         border-radius: 5px;
         text-align: right;
 
@@ -64,7 +65,7 @@
                 height: 15px;
 
                 path {
-                    fill: $day-color;
+                    fill: $day-color-dark;
                 }
             }
         }
@@ -82,6 +83,11 @@
         .page-link {
             display: block;
             padding: 5px 10px;
+
+            &:not(:last-child) {
+                margin-right: 0;
+            }
+            margin-left: 20px;
         }
     }
 }
@@ -92,7 +98,7 @@
  * Site footer
  */
 .site-footer {
-    border-top: 1px solid $day-color;
+    border-top: 1px solid $day-color-light;
     padding: $spacing-unit 0;
 }
 
