--- a/css/main.scss
+++ b/css/main.scss
@@ -6,8 +6,9 @@
 
 
 // Our variables
-$base-font-family: Helvetica, Arial, sans-serif;
+$base-font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 $base-font-size:   16px;
+$base-font-weight: 400;
 $small-font-size:  $base-font-size * 0.875;
 $base-line-height: 1.5;
 
@@ -17,7 +18,13 @@ $text-color:       #252C33;
 $background-color: #fdfdfd;
 $brand-color:      #004563;
 
+$grey-color:       #828282;
+$grey-color-light: lighten($grey-color, 40%);
+$grey-color-dark:  darken($grey-color, 25%);
+
 $day-color:       #ab1a25;
+$day-color-light: lighten($day-color, 40%);
+$day-color-dark:  darken($day-color, 10%);
 
 // Width of the content area
 $content-width:    800px;
@@ -26,8 +33,7 @@ $on-palm:          600px;
 $on-laptop:        800px;
 
 
-
-// Using media queries with like this:
+// Use media queries like this:
 // @include media-query($on-palm) {
 //     .wrapper {
 //         padding-right: $spacing-unit / 2;
